nav : fixing invisible links when closed

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -44,9 +44,9 @@
         width: 100%;
         position: fixed;
         top: 0;
-        left: 0;
-        z-index: 1500;
-
+        left: -1rem;
+        // z-index: 1500;
+        z-index: 0;
         opacity: 0;
         width: 0;
         transition: all .8s cubic-bezier(0.34, 1.56, 0.64, 1);
@@ -109,6 +109,7 @@
     {
         opacity: 1;
         width: 100%;
+        z-index: 1500;
     }
 
     &__background
